@@ -4,6 +4,9 @@ Changelog
 1.0b10
 ------
 
+* Avoid a deprecation warning for InitializeClass in Zope 2.12.
+  [hannosch]
+
 1.0b9
 -----
 
